@@ -494,6 +494,10 @@ code {
 
 <p><strong>scrollbar.bg_color</strong> | <code>color, int : Color, Alpha</code> | The background color for the entire scrollbar.</p>
 
+<p><strong>log.padding</strong> | <code>int</code> | The padding in pixels of the log text area.</p>
+
+<p><strong>sound.activate</strong> | <code>filename</code> | The sound effect file to play when certain widgets are activated/clicked.</p>
+
 <hr />
 
 <h4>EngineSettings: XP table</h4>
@@ -857,6 +861,8 @@ code {
 <p><strong>show_classlist</strong> | <code>bool</code> | Allows hiding the class list.</p>
 
 <p><strong>show_randomize</strong> | <code>bool</code> | Toggles the visibility of the "Randomize" button.</p>
+
+<p><strong>show_permadeath</strong> | <code>bool</code> | Toggles the visibility of the "Permadeath?" checkbox.</p>
 
 <p><strong>random_option</strong> | <code>bool</code> | Initially picks a random character option (aka portrait/name).</p>
 
@@ -1623,28 +1629,6 @@ code {
 <p><strong>button_config</strong> | <code>point</code> | Position of the 'Configuration' button. The button will be hidden if not defined.</p>
 
 <p><strong>default_zoom_level</strong> | <code>int</code> | Zoom level of the map when viewed at "1x". By default, this is 1, which equates to each tile being 1 pixel tall.</p>
-
-<hr />
-
-<h4>MenuMovementType</h4>
-
-<p>Description of menus/movement_type.txt</p>
-
-<p><strong>label_title</strong> | <code>label</code> | Position of the "Select a Movement Type" text.</p>
-
-<p><strong>label_config_hint</strong> | <code>label</code> | Position of the "Can be changed later in the Configuration menu" text.</p>
-
-<p><strong>button_keyboard</strong> | <code>point</code> | Position of the "Keyboard" button.</p>
-
-<p><strong>button_mouse</strong> | <code>point</code> | Position of the "Mouse" button.</p>
-
-<p><strong>button_joystick</strong> | <code>point</code> | Position of the "Joystick" button.</p>
-
-<p><strong>icon_keyboard</strong> | <code>point</code> | Position of the keyboard icon.</p>
-
-<p><strong>icon_mouse</strong> | <code>point</code> | Position of the mouse icon.</p>
-
-<p><strong>icon_joystick</strong> | <code>point</code> | Position of the joystick icon.</p>
 
 <hr />
 
